src/JazLabs/hardware/digHolo/digHolo_v1.0.0/Examples/Matlab/digHolo.h

typedef float complex64;
typedef float complex64[2];
EXT_C int digHoloCreate();
EXT_C int digHoloDestroy(int handleIdx);
EXT_C int digHoloSetFrameBuffer(int handleIdx, float* buffer);
EXT_C float* digHoloGetFrameBuffer(int handleIdx);
EXT_C int digHoloSetFrameBufferUint16(int handleIdx, unsigned short* buffer, int transposeMode);
EXT_C unsigned short* digHoloGetFrameBufferUint16(int handleIdx, int* transposeMode);
EXT_C int digHoloSetFrameBufferFromFile(int handleIdx, const char* fname);
EXT_C int digHoloConfigSetFrameDimensions(int handleIdx, int width, int height);
EXT_C int digHoloConfigGetFrameDimensions(int handleIdx, int* width, int* height);
EXT_C int digHoloConfigSetFramePixelSize(int handleIdx, float pixelSize);
EXT_C float digHoloConfigGetFramePixelSize(int handleIdx);
EXT_C int digHoloConfigSetPolCount(int handleIdx, int polCount);
EXT_C int digHoloConfigGetPolCount(int handleIdx);
EXT_C int digHoloConfigSetRefCalibrationIntensity(int handleIdx, unsigned short* cal, int wavelengthCount, int width, int height);
EXT_C int digHoloConfigSetRefCalibrationField(int handleIdx, complex64* cal, int wavelengthCount, int width, int height);
EXT_C int digHoloConfigSetRefCalibrationFromFile(int handleIdx, const char* fname, int wavelengthCount, int width, int height);
EXT_C int digHoloConfigSetRefCalibrationEnabled(int handleIdx, int enabled);
EXT_C int digHoloConfigGetRefCalibrationEnabled(int handleIdx);
EXT_C complex64* digHoloConfigGetRefCalibrationFields(int handleIdx, int* wavelengthCount, int* polCount, float** x, float** y, int* width, int* height);