src/JazLabs/hardware/digHolo/digHolo_v1.0.0/src/digholoHeader.py


        # must include standard libs, since those paths are also used by 64 bit
        # installs
        unix_lib_dirs_list += ["/lib", "/usr/lib"]
        if sys.platform.startswith("linux"):
            # Try and support multiarch work in Ubuntu
            # https://wiki.ubuntu.com/MultiarchSpec
            if bitage.startswith("32"):
                # Assume Intel/AMD x86 compat
                unix_lib_dirs_list += ["/lib/i386-linux-gnu", "/usr/lib/i386-linux-gnu"]
            elif bitage.startswith("64"):
                # Assume Intel/AMD x86 compatible
                unix_lib_dirs_list += [
                    "/lib/x86_64-linux-gnu",
                    "/usr/lib/x86_64-linux-gnu",
                ]
            else:
                # guess...
                unix_lib_dirs_list += glob.glob("/lib/*linux-gnu")
        directories.extend(unix_lib_dirs_list)

        cache = {}
        lib_re = re.compile(r"lib(.*)\.s[ol]")
        # ext_re = re.compile(r"\.s[ol]$")
        for our_dir in directories.ordered():
            try:
                for path in glob.glob("%s/*.s[ol]*" % our_dir):
                    file = os.path.basename(path)

                    # Index by filename
                    cache_i = cache.setdefault(file, set())
                    cache_i.add(path)

                    # Index by library name
                    match = lib_re.match(file)
                    if match:
                        library = match.group(1)
                        cache_i = cache.setdefault(library, set())
                        cache_i.add(path)
            except OSError:
                pass

        self._ld_so_cache = cache

    def getplatformpaths(self, libname):
        if self._ld_so_cache is None:
            self._create_ld_so_cache()

        result = self._ld_so_cache.get(libname, set())
        for i in result:
            # we iterate through all found paths for library, since we may have
            # actually found multiple architectures or other library types that
            # may not load
            yield i


# Windows


class WindowsLibraryLoader(LibraryLoader):
    """Library loader for Microsoft Windows"""

    name_formats = ["%s.dll", "lib%s.dll", "%slib.dll", "%s"]

    class Lookup(LibraryLoader.Lookup):
        """Lookup class for Windows libraries..."""

        def __init__(self, path):
            super(WindowsLibraryLoader.Lookup, self).__init__(path)
            self.access["stdcall"] = ctypes.windll.LoadLibrary(path)


# Platform switching

# If your value of sys.platform does not appear in this dict, please contact
# the Ctypesgen maintainers.

loaderclass = {
    "darwin": DarwinLibraryLoader,
    "cygwin": WindowsLibraryLoader,
    "win32": WindowsLibraryLoader,
    "msys": WindowsLibraryLoader,
}

load_library = loaderclass.get(sys.platform, PosixLibraryLoader)()


def add_library_search_dirs(other_dirs):
    """
    Add libraries to search paths.
    If library paths are relative, convert them to absolute with respect to this
    file's directory
    """
    for path in other_dirs:
        if not os.path.isabs(path):
            path = os.path.abspath(path)
        load_library.other_dirs.append(path)


del loaderclass

# End loader

add_library_search_dirs([])

# Begin libraries
_libs["digHolo.dll"] = load_library("digHolo.dll")

# 1 libraries
# End libraries

# No modules

complex64 = c_float * int(2)# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 163

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 209
for _lib in _libs.values():
    if not _lib.has("digHoloCreate", "cdecl"):
        continue
    digHoloCreate = _lib.get("digHoloCreate", "cdecl")
    digHoloCreate.argtypes = []
    digHoloCreate.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 216
for _lib in _libs.values():
    if not _lib.has("digHoloDestroy", "cdecl"):
        continue
    digHoloDestroy = _lib.get("digHoloDestroy", "cdecl")
    digHoloDestroy.argtypes = [c_int]
    digHoloDestroy.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 245
for _lib in _libs.values():
    if not _lib.has("digHoloSetFrameBuffer", "cdecl"):
        continue
    digHoloSetFrameBuffer = _lib.get("digHoloSetFrameBuffer", "cdecl")
    digHoloSetFrameBuffer.argtypes = [c_int, POINTER(c_float)]
    digHoloSetFrameBuffer.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 255
for _lib in _libs.values():
    if not _lib.has("digHoloGetFrameBuffer", "cdecl"):
        continue
    digHoloGetFrameBuffer = _lib.get("digHoloGetFrameBuffer", "cdecl")
    digHoloGetFrameBuffer.argtypes = [c_int]
    digHoloGetFrameBuffer.restype = POINTER(c_float)
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 268
for _lib in _libs.values():
    if not _lib.has("digHoloSetFrameBufferUint16", "cdecl"):
        continue
    digHoloSetFrameBufferUint16 = _lib.get("digHoloSetFrameBufferUint16", "cdecl")
    digHoloSetFrameBufferUint16.argtypes = [c_int, POINTER(c_ushort), c_int]
    digHoloSetFrameBufferUint16.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 277
for _lib in _libs.values():
    if not _lib.has("digHoloGetFrameBufferUint16", "cdecl"):
        continue
    digHoloGetFrameBufferUint16 = _lib.get("digHoloGetFrameBufferUint16", "cdecl")
    digHoloGetFrameBufferUint16.argtypes = [c_int, POINTER(c_int)]
    digHoloGetFrameBufferUint16.restype = POINTER(c_ushort)
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 288
for _lib in _libs.values():
    if not _lib.has("digHoloSetFrameBufferFromFile", "cdecl"):
        continue
    digHoloSetFrameBufferFromFile = _lib.get("digHoloSetFrameBufferFromFile", "cdecl")
    digHoloSetFrameBufferFromFile.argtypes = [c_int, String]
    digHoloSetFrameBufferFromFile.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 298
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetFrameDimensions", "cdecl"):
        continue
    digHoloConfigSetFrameDimensions = _lib.get("digHoloConfigSetFrameDimensions", "cdecl")
    digHoloConfigSetFrameDimensions.argtypes = [c_int, c_int, c_int]
    digHoloConfigSetFrameDimensions.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 308
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetFrameDimensions", "cdecl"):
        continue
    digHoloConfigGetFrameDimensions = _lib.get("digHoloConfigGetFrameDimensions", "cdecl")
    digHoloConfigGetFrameDimensions.argtypes = [c_int, POINTER(c_int), POINTER(c_int)]
    digHoloConfigGetFrameDimensions.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 317
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetFramePixelSize", "cdecl"):
        continue
    digHoloConfigSetFramePixelSize = _lib.get("digHoloConfigSetFramePixelSize", "cdecl")
    digHoloConfigSetFramePixelSize.argtypes = [c_int, c_float]
    digHoloConfigSetFramePixelSize.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 325
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetFramePixelSize", "cdecl"):
        continue
    digHoloConfigGetFramePixelSize = _lib.get("digHoloConfigGetFramePixelSize", "cdecl")
    digHoloConfigGetFramePixelSize.argtypes = [c_int]
    digHoloConfigGetFramePixelSize.restype = c_float
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 334
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetPolCount", "cdecl"):
        continue
    digHoloConfigSetPolCount = _lib.get("digHoloConfigSetPolCount", "cdecl")
    digHoloConfigSetPolCount.argtypes = [c_int, c_int]
    digHoloConfigSetPolCount.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 344
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetPolCount", "cdecl"):
        continue
    digHoloConfigGetPolCount = _lib.get("digHoloConfigGetPolCount", "cdecl")
    digHoloConfigGetPolCount.argtypes = [c_int]
    digHoloConfigGetPolCount.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 369
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetRefCalibrationIntensity", "cdecl"):
        continue
    digHoloConfigSetRefCalibrationIntensity = _lib.get("digHoloConfigSetRefCalibrationIntensity", "cdecl")
    digHoloConfigSetRefCalibrationIntensity.argtypes = [c_int, POINTER(c_ushort), c_int, c_int, c_int]
    digHoloConfigSetRefCalibrationIntensity.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 384
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetRefCalibrationField", "cdecl"):
        continue
    digHoloConfigSetRefCalibrationField = _lib.get("digHoloConfigSetRefCalibrationField", "cdecl")
    digHoloConfigSetRefCalibrationField.argtypes = [c_int, POINTER(complex64), c_int, c_int, c_int]
    digHoloConfigSetRefCalibrationField.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 400
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetRefCalibrationFromFile", "cdecl"):
        continue
    digHoloConfigSetRefCalibrationFromFile = _lib.get("digHoloConfigSetRefCalibrationFromFile", "cdecl")
    digHoloConfigSetRefCalibrationFromFile.argtypes = [c_int, String, c_int, c_int, c_int]
    digHoloConfigSetRefCalibrationFromFile.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 409
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetRefCalibrationEnabled", "cdecl"):
        continue
    digHoloConfigSetRefCalibrationEnabled = _lib.get("digHoloConfigSetRefCalibrationEnabled", "cdecl")
    digHoloConfigSetRefCalibrationEnabled.argtypes = [c_int, c_int]
    digHoloConfigSetRefCalibrationEnabled.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 417
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetRefCalibrationEnabled", "cdecl"):
        continue
    digHoloConfigGetRefCalibrationEnabled = _lib.get("digHoloConfigGetRefCalibrationEnabled", "cdecl")
    digHoloConfigGetRefCalibrationEnabled.argtypes = [c_int]
    digHoloConfigGetRefCalibrationEnabled.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 437
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetRefCalibrationFields", "cdecl"):
        continue
    digHoloConfigGetRefCalibrationFields = _lib.get("digHoloConfigGetRefCalibrationFields", "cdecl")
    digHoloConfigGetRefCalibrationFields.argtypes = [c_int, POINTER(c_int), POINTER(c_int), POINTER(POINTER(c_float)), POINTER(POINTER(c_float)), POINTER(c_int), POINTER(c_int)]
    digHoloConfigGetRefCalibrationFields.restype = POINTER(complex64)
    break
